--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script type="text/javascript" src="js/rem.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>智慧物流服务中心-首页</title>
+    <title>智慧物流服务中心-首页-master</title>
 </head>
 
 <body style="visibility: hidden;">
