--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="box-left">
             <div class="left-top">
                 <div class="current-num">
-                    <div>当前到件量</div>
+                    <div>当前到件量00000000000</div>
                     <p>123,456,789</p>
                 </div>
             </div>
