修改了两个文件

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="box-left">
             <div class="left-top">
                 <div class="current-num">
-                    <div>当前到件量</div>
+                    <div>当前到件量0000000000000</div>
                     <p>123,456,789</p>
                 </div>
             </div>
